--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,26 +9,11 @@ extra_css:
   - stylesheets/extra.css
 nav:
   - Overview: index.md
-  - Quickstart: quickstart.md
-  - Core Functionalities:
-      - Catchment Interpolation: core-functionalities/catchment-interpolation.md
-      - Runoff Generation: core-functionalities/runoff.md
-      - River Routing: core-functionalities/routing.md
-  - Core Helper Structures:
-      - TimeSeriesDf: core-helper-structures/timeseriesdf.md
-      - JointSampler: core-helper-structures/joint-sampler.md
-  - Pipelines:
-      - Simple Simulation: pipelines/simple-simulation.md
-      - Routing Calibration: pipelines/routing-calibration.md
-      - Routing Parameter Learning: pipelines/routing-parameter-learning.md
-      - Routing + Runoff Learning: pipelines/routing-and-runoff-learning.md
-  - Advanced Usage:
-      - Pipeline Fusion: advanced-usage/pipeline-fusion.md
-      - Generator Streaming: advanced-usage/generator-streaming.md
-  - Examples:
-      - GeoGLOWS: examples/geoglows.md
-      - Ono River: examples/ono-river.md
-      - JPdH: examples/jpdh.md
+  - Quick Start: quickstart.md
+  - Structures: structures.md
+  - Modules: modules.md
+  - Pipelines: pipelines.md
+  - Examples: examples.md
 plugins:
   - search
 markdown_extensions:
